public/css/style.css
#pause { -webkit-font-smoothing: antialiased; }

.scene, #game-control {
  -webkit-touch-callout: none; /* prevent callout to copy image, etc when tap to hold */
  -webkit-text-size-adjust: none; /* prevent webkit from resizing text to fit */
/* make transparent link selection, adjust last value opacity 0 to 1.0 */
  -webkit-tap-highlight-color: rgba(0,0,0,1.0); 
  -webkit-user-select: none; /* prevent copy paste, to allow, change 'none' to 'text' */
}

html, body {
  height: 100%;
  padding: 0;
/*  max-width: 1000px;*/
  margin: 0 auto;
  background: #2c3e50;
  color: #ECF0F1;
}

html, body, input {
  font-family: 'Roboto', times;
  font-weight: 300;
  font-size: 16px;
}

body {
  box-sizing: border-box;
}

body h2 {
  padding-top: 2rem;
}

input {
  -webkit-appearance: none;
}

html {
  overflow-y: scroll;
}

#welcome {
  background: #2C3E50 url(../images/logo.png) no-repeat center top;
  background-size: 80%;
}

#welcome h1 {
  margin: 0;
  background-size: 80%;
  min-height: 380px;
  text-indent: -9000px;
}

.buttons {
  padding: 1rem;
  padding-bottom: 0;
}

.button {
  text-decoration: none;
  display: block;
  width: 180px;
  height: 50px;
  border-radius: 10px;
  margin: 1.5rem auto;
  line-height: 50px;
  color: #ECF0F1;
  font-size: 1.5rem;
  font-weight: 300;
  text-align: center;
  border: 0;
  cursor: pointer;
}

.button.join {
  background: #3493d6;
  box-shadow: 0px 0.25rem 0 0 #2980b4;
}

.button.start,
.button.resume {
  background: #1ab797;
  box-shadow: 0px 0.25rem 0 0 #169b80;
}

.button.exit,
.button.again {
  background: #E74C3C;
  box-shadow: 0px 0.25rem 0 0 #C0392B;
}

footer {
  padding: 1rem;
}

footer a {
  color: #ECF0F1;
  font-size: 1rem;
  font-weight: 100;
  text-decoration: none;
}

footer a:last-child {
  float: right; 
}

.pin .info {
  background: #E74C3C;
  width: 9rem;
  margin: 0 auto;
  border-radius: 9rem;
  padding: 1rem;
  text-align: center;
  height: 9rem;
  position: relative;
  z-index: 1;
  border: 0;
  font-size: 4rem;
  text-transform: uppercase;
  display: block;
  box-sizing: content-box;
}

.pin small {
    text-transform: uppercase;
    margin: 1.5rem 0 1rem;
    display: block;
    font-size: 1rem;
}

.pin p {
    text-align: center;
    font-size: 4rem;
    font-weight: 100;
    margin: 0;
    line-height: 3rem;
}

h2 {
    font-weight: 100;
    text-align: center;
    margin: 0 2rem 2rem;
}

#join .streak:before {
  top: 13.6rem;
}

.pin .streak {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  overflow: hidden;
  pointer-events: none;
}

.pin .streak:before {
  content: '';
  background: #ebeff0;
  width: 60rem;
  height: 11rem;
  position: absolute;
  right: 50%;
  top: 6rem;
  overflow: hidden;
  z-index: 0;
  text-transform: uppercase;
  display: block;
  -webkit-transform: rotate(-65deg);
  -webkit-transform-origin: 100%;
  -moz-transform: rotate(-65deg);
  -moz-transform-origin: 100%;
  transform: rotate(-65deg);
  transform-origin: 100%;

  background: #ebeff0; /* Old browsers */
  background: -moz-linear-gradient(left,  rgba(0,0,0,0) 0%, #ebeff0 100%); /* FF3.6+ */
  background: -webkit-gradient(linear, left top, right top, color-stop(0%,rgba(0,0,0,0)), color-stop(100%,#ebeff0)); /* Chrome,Safari4+ */
  background: -webkit-linear-gradient(left,  rgba(0,0,0,0) 0%,#ebeff0 100%); /* Chrome10+,Safari5.1+ */
  background: -o-linear-gradient(left,  rgba(0,0,0,0) 0%,#ebeff0 100%); /* Opera 11.10+ */
  background: -ms-linear-gradient(left,  rgba(0,0,0,0) 0%,#ebeff0 100%); /* IE10+ */
  background: linear-gradient(to right,  rgba(0,0,0,0) 0%,#ebeff0 100%); /* W3C */
  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='rgba(0,0,0,0)', endColorstr='#ebeff0',GradientType=1 ); /* IE6-9 */

}

#join .info {
    color: #2c3e50;
    font-weight: 300;
    background: #27AE60;
    font-weight: 200;
}

.field {
  display: block;
  background: #BDC3C7;
  border: 0;
  font-size: 3.5rem;
  text-align: center;
  margin: 0 auto 2rem auto;
  padding: 0.5rem;
  box-sizing: border-box;
  width: 80%;
  position: relative;
  border-radius: 0;
}

input[type=number]::-webkit-inner-spin-button,
input[type=number]::-webkit-outer-spin-button {
  -webkit-appearance: none;
}

#join .info:active {
  background: rgb(38, 136, 79);
}

input[type=submit] {
  cursor: pointer;
}

.scene {
  background: #2C3E50;
  height: 100%;
  position: relative;
}

.bgmountains {
  background: url(../images/mountains.png) no-repeat center bottom;
  height: 50%;
  background-size: 100%;
}

.floor {
  background: #16A085 no-repeat center top;
  height: 50%;
  position: relative;
}

.player {
  background-size: 100%;
  background-repeat: no-repeat;
  background-position: center;
  position: absolute;
  width: 170px;
  height: 225px;
  top: -10rem;
  right: 30%;
}

.player-a .player {
  background-image: url(../images/player-a-throw1.png);
}

.player-b .player {
  background-image: url(../images/player-b-throw1.png);
}

.player-a.player-a-turn .player {
  background-image: url(../images/player-a-center.png);
}

.player-b.player-b-turn .player {
  background-image: url(../images/player-b-center.png);
}

.player-b.player-b-turn .player.center {
  background-image: url(../images/player-b-center.png);
}

.player-b.player-b-turn .player.left {
  background-image: url(../images/player-b-left.png);
}

.player-b.player-b-turn .player.right {
  background-image: url(../images/player-b-right.png);
}

.player-a.player-a-turn .player.center {
  background-image: url(../images/player-a-center.png);
}

.player-a.player-a-turn .player.left {
  background-image: url(../images/player-a-left.png);
}

.player-a.player-a-turn .player.right {
  background-image: url(../images/player-a-right.png);
}

.player.left .face {
  -webkit-transform: rotate(-25deg) translateX(-35px) translateY(7px);
  -moz-transform: rotate(-25deg) translateX(-35px) translateY(7px);
  transform: rotate(-25deg) translateX(-35px) translateY(7px);
}

.player.right .face {
  -webkit-transform: rotate(25deg) translateX(47px) translateY(4px);
  -moz-transform: rotate(25deg) translateX(47px) translateY(4px);
  transform: rotate(25deg) translateX(47px) translateY(4px);
}

.ball {
  display: none;
}

.player-b.player-b-turn .ball,
.player-a.player-a-turn .ball {
  display: block;
}

.face {
  background-repeat: no-repeat;
  background-position: center;
  width: 40px;
  height: 40px;
  position: absolute;
  top: 32px;
  left: 61px;
  background-size: 200%;
  background-repeat: no-repeat;
  display: block;
  overflow: hidden;
}

.ball {
    position: absolute;
    top: 0;
    right: 35%;
    width: 126px;
    height: 100%;
    background: url(../images/ball.png) no-repeat center 110%;
    background-size: 100%;
    max-height: 100%;
    overflow: hidden;
}

.arrow {
    position: absolute;
    background: url(../images/3d-arrow.png) no-repeat;
    width: 33%;
    height: 100px;
    bottom: 0;
    background-size: 100%;
    left: 33%;
    bottom: 100px;
}

.player {
    display: block;
}

video {
  /*display: none;*/
}

#pause {
  font-weight: 800;
  background: rgb(160, 160, 160);
  text-decoration: none;
  color: white;
  display: block;
  position: absolute;
  right: 10px;
  top: 10px;
  width: 20px;
  height: 20px;
  border-radius: 20px;
  padding: 6px;
  text-align: center;
}

#game-control {
  background: #2C3E50;
  height: 100%;
  top: -100%;
  -webkit-transition: -webkit-transform 250ms;
  -moz-transition: -moz-transform 250ms;
  transition: transform 250ms;
  position: absolute;
  z-index: 1;
}

.pause #game-control {
  -webkit-transform: translateY(100%);
  -moz-transform: translateY(100%);
  transform: translateY(100%);
}

#pin {
  position: absolute;
  bottom: 0;
  left: 0;
  padding: 5px;
}

#myscore {
  position: absolute;
  right: 0;
  bottom: 0;
  padding: 1rem 1.5rem;
  font-size: 45px;
  font-weight: 100;
}

#theirscore {
  position: absolute;
  text-align: center;
  width: 100%;
  left: -5px;
  font-size: 30px;
  top: -1.25rem;
  font-weight: 100;
}

.three {
  position: absolute;
  top: 0;
  left: 0;
}

